tests/negative/runtime/shift_too_large/input.ci
void main() {
    int x = 1 >> 64;
    print(toString(x) + "\n");
}
